	* tools/Makefile.am: Removed 'txt2cc' from build
	* data/*: Removed 'txt2cc' rubbish, and create 'exult.flx'. Updated
	credits & quotes
	* game.cc, bggame.cc, sigame.cc: Use credits, quotes & shapes from
	'exult.flx'
	* */*: Put some debugging messages between #if DEBUG/#endif

2000-08-31  Jeff Freedman  <jeff@amy.nerble.net>

	* Cleaning up Ireg constructors, working on 'fields'.

2000-08-30  Jeff Freedman  <jeff@patches.simutech.com>

	* Actually from Derek Liauw Kie Fa:  New 2X scaling code.

2000-08-30  Tristan Tarrant  <nadir@users.sourceforge.net>

	* data/exult_credits.shp, 
	  data/exult_quotes.shp,
	  data/exult_logo.shp: Two shapes for the main menu and a logo
	* game.cc: use the above shapes, instead of using the MAINSHP font
	and implement a banner.
	* exult.cc: show banner

2000-08-30  Tristan Tarrant  <nadir@users.sourceforge.net>

	* tools/u7shpload.c: Saving works properly now. Damn alpha :-)

2000-08-30  Tristan Tarrant  <nadir@users.sourceforge.net>

	* tools/u7shpload.c: Prompt user for a palette file for loading.
	Decent colours at last !!!

2000-08-30  Tristan Tarrant  <nadir@users.sourceforge.net>

	* tools/u7shpload.c: Fixed serious bug where opening multiple SHPs
	would not work. Saving is still screwed...

2000-08-29  Jeff Freedman  <jeff@amy.nerble.net>

	* egg.cc: Support external_criteria eggs.
	* Watch for alt-key going up in Get_click.

2000-08-28  Jeff Freedman  <jeff@amy.nerble.net>

	* Fixed 'cube' puzzle, by adding 'framenum' parm. to find_nearby().

2000-08-27  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode.cc: Mark/recall spells supported.

2000-08-27  Willem Jan Palenstijn <palenstijn@wanadoo.nl>

	* exult.cc/usecode.cc: mark location on map (also on teleport map)
	* spells.cc: now need level x for casting x-th circle spells

2000-08-26  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode.cc: Support crystal-ball.
	* gametxt.cc: Fixed bee combat mode, also smokebombs.

2000-08-25  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
